# robotti

./: Cargo.toml
crates/robotti/: Cargo.toml
crates/robotti/src/: main.rs
crates/speech-model/: Cargo.toml
crates/speech-model/src/: jokes  lib.rs
